--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,8 +9,8 @@ services:
     ports:
       - "3000:3000"
     volumes:
-      - ./data:/data
-      - ./logs:/app/logs
+      - "../files/newapi_data:/data"
+      - "../files/newapi_logs:/app/logs"
     environment:
       - SQL_DSN=root:123456@tcp(mysql:3306)/new-api  # Point to the mysql service
       - REDIS_CONN_STRING=redis://redis
@@ -44,9 +44,7 @@ services:
       MYSQL_ROOT_PASSWORD: 123456  # Ensure this matches the password in SQL_DSN
       MYSQL_DATABASE: new-api
     volumes:
-      - mysql_data:/var/lib/mysql
+      - "../files/newapi_mysql_data:/var/lib/mysql"
     # ports:
     #   - "3306:3306"  # If you want to access MySQL from outside Docker, uncomment
 
-volumes:
-  mysql_data:
